--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -26,7 +26,7 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          extra_args: --json --only-verified
+          extra_args: --json --only-verified --no-history
       
       - name: Scan results
         if: failure()
