--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -26,6 +26,8 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
+          base: ""
+          head: ""
           extra_args: --json --only-verified --no-history
       
       - name: Scan results
