--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -28,7 +28,7 @@ jobs:
           path: ./
           base: ""
           head: ""
-          extra_args: --json --only-verified --no-history
+          extra_args: --json --only-verified
       
       - name: Scan results
         if: failure()
