--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -1,4 +1,4 @@
-name: Secrets Detection Pipeline
+name: GitGuardian Secrets Scan
 
 on:
   push:
@@ -11,46 +11,43 @@ on:
       - develop
 
 jobs:
-      
-  trufflehog-scan:
-    name: TruffleHog Secret Scanning
+  ggshield_scan:
+    name: GitGuardian CI Secret Scan
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
-      - name: TruffleHog OSS
-        uses: trufflesecurity/trufflehog@main
+
+      - name: Run GitGuardian Scan
+        uses: GitGuardian/ggshield-action@v1
+        env:
+          GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
         with:
-          path: ./
-          base: ""
-          head: ""
-          extra_args: --json --only-verified
-      
-      - name: Scan results
+          args: scan repo .
+
+      - name: Annotate failure
         if: failure()
-        run: echo "TruffleHog wykrył potencjalne sekrety!"
+        run: echo "❌ GitGuardian wykrył sekret w repozytorium!"
 
   security-gate:
-    name: Security Gate
-    needs: trufflehog-scan
+    name: Security Gate (Merge blocker)
+    needs: ggshield_scan
     runs-on: ubuntu-latest
     if: always()
-    
+
     steps:
-      - name: Check scan results
+      - name: Block PR if secret found
         run: |
-          if [ "${{ needs.trufflehog-scan.result }}" == "failure" ]; then
-            echo "❌ Wykryto sekrety w kodzie!"
-            echo "Przegląd wyników skanowania jest wymagany przed merge'em."
+          if [ "${{ needs.ggshield_scan.result }}" == "failure" ]; then
+            echo "❌ Sekrety wykryte! Merge zablokowany."
             exit 1
           else
-            echo "✅ Nie wykryto sekretów w kodzie"
+            echo "✅ Brak sekretów – możesz mergeować PR."
           fi
-      
+
       - name: Comment PR
         if: github.event_name == 'pull_request' && failure()
         uses: actions/github-script@v7
@@ -60,5 +57,14 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '⚠️ **Wykryto potencjalne sekrety w kodzie!**\n\nProszę przejrzeć wyniki skanowania w zakładce "Security" > "Code scanning alerts" przed merge\'em tego Pull Requesta.\n\n**Instrukcje remediacji:**\n1. Usuń wykryte sekrety z kodu\n2. Zrotuj skompromitowane klucze/tokeny\n3. Użyj vault lub secrets manager do bezpiecznego przechowywania'
+              body: `
+                **GitGuardian wykrył wyciek sekretów!**
+                Pipeline został zatrzymany.
+
+                **Jak naprawić problem?**
+                1. Usuń sekret z kodu
+                2. Zrotuj klucz/token
+                3. Dodaj go do GitHub Secrets / Vault
+                4. Wykonaj ponowny commit bez sekretu
+              `
             })
