--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -2,52 +2,42 @@ name: GitGuardian Secrets Scan
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: [ main, develop ]
   pull_request:
-    branches:
-      - main
-      - develop
+    branches: [ main, develop ]
+
+permissions:
+  contents: read
+  pull-requests: write 
+  security-events: write
 
 jobs:
-  ggshield_scan:
-    name: GitGuardian CI Secret Scan
+  secret-scan:
+    name: Secret Detection
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 
 
-      - name: Run GitGuardian Scan
+      - name: Run GitGuardian Scan (SARIF output)
         uses: GitGuardian/ggshield-action@v1
+        with:
+          args: scan ci --format sarif --output ggshield-report.sarif
         env:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
+        continue-on-error: true 
 
-      - name: Annotate failure
-        if: failure()
-        run: echo "❌ GitGuardian wykrył sekret w repozytorium!"
+      - name: Upload SARIF report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ggshield-report.sarif
 
-  security-gate:
-    name: Security Gate (Merge blocker)
-    needs: ggshield_scan
-    runs-on: ubuntu-latest
-    if: always()
-
-    steps:
-      - name: Block PR if secret found
-        run: |
-          if [ "${{ needs.ggshield_scan.result }}" == "failure" ]; then
-            echo "❌ Sekrety wykryte! Merge zablokowany."
-            exit 1
-          else
-            echo "✅ Brak sekretów – możesz mergeować PR."
-          fi
-
-      - name: Comment PR
-        if: github.event_name == 'pull_request' && failure()
+      #znalezione sekrety w kontekscie pull_request
+      - name: Comment on PR with Remediation
+        if: failure() && github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           script: |
@@ -56,13 +46,16 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `
-                **GitGuardian wykrył wyciek sekretów!**
-                Pipeline został zatrzymany.
+                ### 🛡️ Security Alert: Wykryto sekrety!
+                Pipeline został zatrzymany, aby zapobiec wyciekowi danych.
 
-                **Jak naprawić problem?**
-                1. Usuń sekret z kodu
-                2. Zrotuj klucz/token
-                3. Dodaj go do GitHub Secrets / Vault
-                4. Wykonaj ponowny commit bez sekretu
+                **Co zostało znalezione?**
+                Sprawdź zakładkę "Files changed" lub logi powyżej, aby zobaczyć szczegóły.
+
+                **Instrukcja naprawy (Remediation):**
+                1. **NIE** usuwaj tylko tekstu w nowym commicie (sekret zostanie w historii gita!).
+                2. Zrotuj (zmień) ujawnione hasło/klucz - uznaj je za spalone.
+                3. Użyj \`git filter-repo\` lub BFG, jeśli sekret trafił do historii, lub po prostu usuń go z bieżących zmian przed pushem (jeśli to tylko PR).
+                4. Dodaj sekret do GitHub Secrets lub Vaulta.
               `
             })
