--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -6,56 +6,43 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+
 permissions:
   contents: read
-  pull-requests: write 
-  security-events: write
+  security-events: write 
+  pull-requests: write   
 
 jobs:
   secret-scan:
     name: Secret Detection
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
 
-      - name: Run GitGuardian Scan (SARIF output)
+      - name: GitGuardian Scan (SARIF output)
         uses: GitGuardian/ggshield-action@v1
         with:
-          args: scan ci --format sarif --output ggshield-report.sarif
+          args: --format sarif --output ggshield-report.sarif
         env:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
         continue-on-error: true 
 
       - name: Upload SARIF report
-        uses: github/codeql-action/upload-sarif@v3
+
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: ggshield-report.sarif
+        if: always() 
 
-      #znalezione sekrety w kontekscie pull_request
-      - name: Comment on PR with Remediation
-        if: failure() && github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `
-                ### 🛡️ Security Alert: Wykryto sekrety!
-                Pipeline został zatrzymany, aby zapobiec wyciekowi danych.
-
-                **Co zostało znalezione?**
-                Sprawdź zakładkę "Files changed" lub logi powyżej, aby zobaczyć szczegóły.
-
-                **Instrukcja naprawy (Remediation):**
-                1. **NIE** usuwaj tylko tekstu w nowym commicie (sekret zostanie w historii gita!).
-                2. Zrotuj (zmień) ujawnione hasło/klucz - uznaj je za spalone.
-                3. Użyj \`git filter-repo\` lub BFG, jeśli sekret trafił do historii, lub po prostu usuń go z bieżących zmian przed pushem (jeśli to tylko PR).
-                4. Dodaj sekret do GitHub Secrets lub Vaulta.
-              `
-            })
+      - name: Check for Secrets and Fail
+        if: always()
+        run: |
+          if [ -f ggshield-report.sarif ]; then
+             echo "Raport wygenerowany."
+          else
+             echo "❌ Błąd krytyczny: Raport nie został wygenerowany."
+             exit 1
+          fi
