--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -30,12 +30,12 @@ jobs:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
         continue-on-error: true 
 
-      - name: Upload Scan Report as Artifact
-        if: always()
-        uses: actions/upload-artifact@v4
+      - name: Upload SARIF report
+
+        uses: github/codeql-action/upload-sarif@v4
         with:
-          name: gitguardian-report
-          path: ggshield-report.sarif
+          sarif_file: ggshield-report.sarif
+        if: always() 
 
       - name: Check for Secrets and Fail
         if: always()
