--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -22,25 +22,25 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: GitGuardian Scan (SARIF output)
+      - name: GitGuardian Scan (Json output)
         uses: GitGuardian/ggshield-action@v1
         with:
-          args: --format sarif --output ggshield-report.sarif
+          args: --format json --output ggshield-report.json
         env:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
         continue-on-error: true 
 
-      - name: Upload SARIF report
-
-        uses: github/codeql-action/upload-sarif@v4
+      - name: Upload Scan Report as Artifact
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          sarif_file: ggshield-report.sarif
-        if: always() 
+          name: gitguardian-report
+          path: ggshield-report.json
 
       - name: Check for Secrets and Fail
         if: always()
         run: |
-          if [ -f ggshield-report.sarif ]; then
+          if [ -f ggshield-report.json ]; then
              echo "Raport wygenerowany."
           else
              echo "❌ Błąd krytyczny: Raport nie został wygenerowany."
