--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -23,6 +23,7 @@ jobs:
           fetch-depth: 0
 
       - name: GitGuardian Scan (Json output)
+        id: ggshield
         uses: GitGuardian/ggshield-action@v1
         with:
           args: --format json --output ggshield-report.json
@@ -45,4 +46,14 @@ jobs:
           else
              echo "❌ Błąd krytyczny: Raport nie został wygenerowany."
              exit 1
+          fi
+
+      - name: Security Gate (Fail if secrets found)
+        if: always()
+        run: |
+          if [ "${{ steps.ggshield.outcome }}" == "failure" ]; then
+             echo "BLOKADA: Wykryto sekrety."
+             exit 1
+          else
+             echo "Brak sekretów w kodzie."
           fi
